--- a/docs/examples/Mean_Flux_Regulation.ipynb
+++ b/docs/examples/Mean_Flux_Regulation.ipynb
@@ -1704,6 +1704,33 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 85,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote spectrum to mfr_test.fits\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "WARNING: AstropyDeprecationWarning: \"clobber\" was deprecated in version 1.3 and will be removed in a future version. Use argument \"overwrite\" instead. [astropy.utils.decorators]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# save for testing\n",
+    "flux_spec.write_to_fits('mfr_test.fits')"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1712,7 +1739,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 86,
    "metadata": {
     "collapsed": false
    },
@@ -1720,10 +1747,10 @@
     {
      "data": {
       "text/plain": [
-       "<mflux_tauevo(p0=0.9760194990734268, p1=-1.6508431495185911, zqso=2.5, lamb_piv=1113.0)>"
+       "<mflux_tauevo(p0=0.9889416915067517, p1=-1.4571120105279094, zqso=2.5, lamb_piv=1113.0)>"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -4381,6 +4408,40 @@
     "dla_conti = py_mfr.mfluxcorr(lambda_r,parm3.p0.value, parm3.p1.value,lamb_piv=parm3.lamb_piv.value)\n",
     "show_fit(dla_spec, new_conti, another_conti=dla_conti)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## IDL testing\n",
+    "    flux = xmrdfits('mfr_test.fits')\n",
+    "    sig = xmrdfits('mfr_test.fits',1)\n",
+    "    wave = xmrdfits('mfr_test.fits',2)\n",
+    "    zqso = 2.5\n",
+    "    ;\n",
+    "    new_flux = qpq6_mf_conti(flux, wave/(1+zqso), sig, zqso, 2.7, /NODLA)\n",
+    "    ;\n",
+    "    delta_mf      0.98911446      -1.4154803\n",
+    "    ; If I use the F-G taueff, I get:\n",
+    "    <mflux_tauevo(p0=0.9889416915067517, p1=-1.4571120105279094, zqso=2.5, lamb_piv=1113.0)>\n",
+    "    ; The same to within a few percent -- good enough"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
