--- a/docs/datasets/COS-Halos_database.ipynb
+++ b/docs/datasets/COS-Halos_database.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# COS-Halos Database (v1.1.3)\n",
+    "# COS-Halos Database (v1.2.0)\n",
     "\n",
     "This Notebook is intended to record updates to the COS-Halos database.\n",
     "\n",
@@ -14,7 +14,8 @@
     " * v1.1   -- 13 Apr 2016 by JXP\n",
     " * v1.1.1 -- 14 Jul 2016 by JXP  [includes 2 values for sig_NHI]\n",
     " * v1.1.2 -- 17 Sep 2016 by JXP  [updated NHI for several systems]\n",
-    " * v1.1.3 -- 21 Oct 2016 by JXP  [add in new ZH, including PDFs]"
+    " * v1.1.3 -- 21 Oct 2016 by JXP  [add in new ZH, including PDFs]\n",
+    " * v1.2.0 -- 10 Feb 2017 by JXP  [add in abmagr; not writing tarball to pyigm yet]"
    ]
   },
   {
@@ -653,20 +654,83 @@
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "----"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tests"
+    "## v1.2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "See the COS-Halos_database notebook for details\n",
+      "Generate v1.2 of the JSON tarball\n",
+      "Be patient, using /Users/xavier/local/Python/pyigm/pyigm/data/CGM/COS_Halos/cos-halos_systems.v1.1.tar.gz to load\n",
+      "Skipping a likely folder: CGM_JSON\n",
+      "Loading mega...\n",
+      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/CGM/COS_Halos/cos-halos_systems.v1.2.tar.gz\n"
+     ]
+    }
+   ],
+   "source": [
+    "reload(pch)\n",
+    "pch.update_cos_halos(v12=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Test"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "cgm = cos_halos_v10[('J0928+6025','110_35')]"
+    "import pyigm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Be patient, using /Users/xavier/local/Python/pyigm/pyigm/data/CGM/COS_Halos/cos-halos_systems.v1.2.tar.gz to load\n",
+      "Skipping a likely folder: CGM_JSON\n"
+     ]
+    }
+   ],
+   "source": [
+    "chalos_v12 = pch.COSHalos(load=False)\n",
+    "tfile = pyigm.__path__[0]+'/data/CGM/COS_Halos/cos-halos_systems.v1.2.tar.gz'\n",
+    "chalos_v12.load_sys(tfile=tfile)"
    ]
   },
   {
@@ -679,23 +743,7 @@
     {
      "data": {
       "text/plain": [
-       "{u'EW': <Quantity 0.63364048743187 Angstrom>,\n",
-       " u'N': <Quantity 60611606990686.49 1 / cm2>,\n",
-       " u'b': <Quantity 0.0 km / s>,\n",
-       " u'coord': <SkyCoord (ICRS): (ra, dec) in deg\n",
-       "     (142.15833333, 60.4225)>,\n",
-       " u'flag_EW': 1,\n",
-       " u'flag_N': 2,\n",
-       " u'flag_origCH': 9,\n",
-       " u'logN': 13.782555798577503,\n",
-       " u'sig_EW': <Quantity 0.05809608690608618 Angstrom>,\n",
-       " u'sig_N': <Quantity 5924195705267.877 1 / cm2>,\n",
-       " u'sig_b': <Quantity 0.0 km / s>,\n",
-       " u'sig_logN': 0.04244806617498398,\n",
-       " u'sig_v': <Quantity 0.0 km / s>,\n",
-       " u'sig_z': 0.0,\n",
-       " u'v': <Quantity 0.0 km / s>,\n",
-       " u'z': 0.1540004312992096}"
+       "-20.38229751586914"
       ]
      },
      "execution_count": 13,
@@ -704,34 +752,13 @@
     }
    ],
    "source": [
-    "cgm.igm_sys.get_absline('SiIII 1206').attrib"
+    "cgm_abs = chalos_v12.cgm_abs[0]\n",
+    "cgm_abs.galaxy.abmagr"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1, 0.15000000596046448)"
-      ]
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "cgm.igm_sys.flag_NHI, cgm.igm_sys.sig_NHI"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -740,56 +767,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(u'J0226+0015_268_22', 0.030700907111167908)\n",
-      "(u'J0401-0540_67_24', 0.032458651810884476)\n",
-      "(u'J0803+4332_306_20', 0.03730316087603569)\n",
-      "(u'J0910+1014_242_34', [0.07023411371237387, 0.040133779264216685])\n",
-      "(u'J0910+1014_34_46', 0.026249060407280922)\n",
-      "(u'J0914+2823_41_27', 0.027630334720015526)\n",
-      "(u'J0925+4004_196_22', 0.15000000596046448)\n",
-      "(u'J0928+6025_110_35', 0.15000000596046448)\n",
-      "(u'J0935+0204_15_28', -9.989999771118164)\n",
-      "(u'J0943+0531_106_34', 0.05258878320455551)\n",
-      "(u'J0943+0531_216_61', 0.06319866329431534)\n",
-      "(u'J0943+0531_227_19', 0.038834087550640106)\n",
-      "(u'J0950+4831_177_27', 0.05671226605772972)\n",
-      "(u'J1009+0713_170_9', -9.989999771118164)\n",
-      "(u'J1009+0713_204_17', 0.032954033464193344)\n",
-      "(u'J1016+4706_274_6', [0.020066889632108342, 0.010033444816052395])\n",
-      "(u'J1016+4706_359_16', 0.028051074594259262)\n",
-      "(u'J1112+3539_236_14', 0.1278170794248581)\n",
-      "(u'J1133+0327_110_5', 0.05999999865889549)\n",
-      "(u'J1133+0327_164_21', 0.04214244708418846)\n",
-      "(u'J1157-0022_230_7', 0.03912068158388138)\n",
-      "(u'J1220+3853_225_38', 0.06084488332271576)\n",
-      "(u'J1233+4758_94_38', [0.05351170568561869, 0.02675585284280757])\n",
-      "(u'J1233-0031_168_7', 0.0224356260150671)\n",
-      "(u'J1241+5721_199_6', 0.04223781079053879)\n",
-      "(u'J1241+5721_208_27', 0.06712911278009415)\n",
-      "(u'J1245+3356_236_36', 0.03669143468141556)\n",
-      "(u'J1322+4645_349_11', [0.03344481605351035, 0.02675585284280757])\n",
-      "(u'J1330+2813_289_28', [0.15050167224080369, 0.08026755852842626])\n",
-      "(u'J1342-0053_157_10', 0.029872488230466843)\n",
-      "(u'J1342-0053_77_10', -9.989999771118164)\n",
-      "(u'J1419+4207_132_30', [0.2909698996655514, 0.09030100334448221])\n",
-      "(u'J1435+3604_126_21', 0.05929992347955704)\n",
-      "(u'J1435+3604_68_12', 0.10000000149011612)\n",
-      "(u'J1437+5045_317_38', 0.11999999731779099)\n",
-      "(u'J1445+3428_232_33', 0.05558601766824722)\n",
-      "(u'J1514+3619_287_14', 0.028403183445334435)\n",
-      "(u'J1550+4001_197_23', 0.022709522396326065)\n",
-      "(u'J1550+4001_97_33', 0.08560911566019058)\n",
-      "(u'J1555+3628_88_11', [0.2608695652173907, 0.13043478260869534])\n",
-      "(u'J1617+0638_253_39', -9.989999771118164)\n",
-      "(u'J1619+3342_113_40', 0.030996013432741165)\n",
-      "(u'J2257+1340_270_40', -9.989999771118164)\n",
-      "(u'J2345-0059_356_12', 0.036028314381837845)\n"
+      "<CGMAbsSys: J0226+0015_268_22 Galaxy RA/DEC=02:26:12.98+00:15:29.1, zgal=0.22744, rho=84.1102 kpc> 0.506896165972\n"
      ]
     }
    ],
    "source": [
-    "for cgm_abs in cos_halos_v10.cgm_abs:\n",
-    "    print(cgm_abs.name, cgm_abs.sig_NHI)"
+    "lstr0 = -21.12\n",
+    "Lstar = 10**(-0.4*(cgm_abs.galaxy.abmagr - lstr0))\n",
+    "print(cgm_abs), Lstar  # Matches our previous result"
    ]
   },
   {
