proper ion table

--- a/docs/datasets/MilkyWay_absline.ipynb
+++ b/docs/datasets/MilkyWay_absline.ipynb
@@ -35,90 +35,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "linetools.lists.parse: Reading linelist --- \n",
-      "   /media/xavier/ExtraDrive1/Python/linetools/linetools/data/lines/morton03_table2.fits.gz\n",
-      "linetools.lists.parse: Reading linelist --- \n",
-      "   /media/xavier/ExtraDrive1/Python/linetools/linetools/data/lines/morton00_table2.fits.gz\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: UnitsWarning: The unit 'Angstrom' has been deprecated in the FITS standard. Suggested: 10**-1 nm. [astropy.units.format.utils]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "linetools.lists.parse: Reading linelist --- \n",
-      "   /media/xavier/ExtraDrive1/Python/linetools/linetools/data/lines/verner96_tab1.fits.gz\n",
-      "linetools.lists.parse: Reading linelist --- \n",
-      "   /media/xavier/ExtraDrive1/Python/linetools/linetools/data/lines/verner94_tab6.fits\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: UnitsWarning: '0.1nm' did not parse as fits unit: Numeric factor not supported by FITS [astropy.units.core]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "linetools.lists.parse: Reading linelist --- \n",
-      "   /media/xavier/ExtraDrive1/Python/linetools/linetools/data/lines/EUV_lines.ascii\n",
-      "read_sets: Using set file -- \n",
-      "  /media/xavier/ExtraDrive1/Python/linetools/linetools/lists/sets/llist_v1.1.ascii\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/xavier/anaconda3/lib/python3.6/site-packages/astropy/table/column.py:1096: MaskedArrayFutureWarning: setting an item on a masked array which has a shared mask will not copy the mask and also change the original mask array in the future.\n",
-      "Check the NumPy 1.11 release notes for more information.\n",
-      "  ma.MaskedArray.__setitem__(self, index, value)\n",
-      "/media/xavier/ExtraDrive1/Python/linetools/linetools/lists/linelist.py:306: UserWarning: WARNING: Multiple lines with wrest=9.72\n",
-      "  warnings.warn(wmsg)\n",
-      "/media/xavier/ExtraDrive1/Python/linetools/linetools/lists/linelist.py:308: UserWarning: Taking the first entry. Maybe use higher precision.\n",
-      "  'Taking the first entry. Maybe use higher precision.')\n",
-      "/media/xavier/ExtraDrive1/Python/linetools/linetools/lists/linelist.py:306: UserWarning: WARNING: Multiple lines with wrest=9.91\n",
-      "  warnings.warn(wmsg)\n",
-      "/media/xavier/ExtraDrive1/Python/linetools/linetools/lists/linelist.py:306: UserWarning: WARNING: Multiple lines with wrest=10.06\n",
-      "  warnings.warn(wmsg)\n",
-      "/media/xavier/ExtraDrive1/Python/linetools/linetools/lists/linelist.py:306: UserWarning: WARNING: Multiple lines with wrest=10.37\n",
-      "  warnings.warn(wmsg)\n",
-      "/media/xavier/ExtraDrive1/Python/linetools/linetools/lists/linelist.py:395: RuntimeWarning: divide by zero encountered in log10\n",
-      "  self._data['log(w*f)'] = np.log10(qm_strength)\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading abundances from Asplund2009\n",
-      "Abundances are relative by number on a logarithmic scale with H=12\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
       "/media/xavier/ExtraDrive1/Python/linetools/linetools/analysis/linelimits.py:165: UserWarning: Redshift=0.  If this is unexpected, set _z and reset limits\n",
-      "  warnings.warn(\"Redshift=0.  If this is unexpected, set _z and reset limits\")\n"
+      "  warnings.warn(\"Redshift=0.  If this is unexpected, set _z and reset limits\")\n",
+      "/media/xavier/ExtraDrive1/Python/pyigm/pyigm/cgm/cgm.py:142: UserWarning: cgm.CGMAbsSys: Using WMAP9 cosmology\n",
+      "  warnings.warn('cgm.CGMAbsSys: Using WMAP9 cosmology')\n"
      ]
     }
    ],
@@ -143,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -152,7 +81,7 @@
      "data": {
       "text/html": [
        "&lt;Table masked=True length=10&gt;\n",
-       "<table id=\"table139718321619072\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<table id=\"table139686010494144\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>Name</th><th>Type</th><th>GLON</th><th>GLAT</th><th>z</th><th>NH</th><th>Exp</th><th>CPRE</th><th>logNO</th><th>E_logNO</th><th>e_logNO</th><th>b</th><th>E_b</th><th>e_b</th><th>Vel</th><th>E_Vel</th><th>e_Vel</th><th>l_EW1</th><th>EW1</th><th>e_EW1</th><th>S/N1</th><th>C/dof</th><th>EW2</th><th>e_EW2</th><th>S/N2</th><th>Note</th></tr></thead>\n",
        "<thead><tr><th></th><th></th><th>deg</th><th>deg</th><th></th><th>1e+20 / cm2</th><th>ks</th><th></th><th>[cm-2]</th><th>[cm-2]</th><th>[cm-2]</th><th>km / s</th><th>km / s</th><th>km / s</th><th>km / s</th><th>km / s</th><th>km / s</th><th></th><th>1e-13 m</th><th>1e-13 m</th><th></th><th></th><th>1e-13 m</th><th>1e-13 m</th><th></th><th></th></tr></thead>\n",
        "<thead><tr><th>str15</th><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>int64</th><th>str1</th><th>float64</th><th>float64</th><th>float64</th><th>str9</th><th>float64</th><th>float64</th><th>float64</th><th>str5</th></tr></thead>\n",
@@ -186,7 +115,7 @@
        " H 2356-309     1  12.839 -78.035  0.1654 ...     9.2     7.4     1.2   12"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -204,7 +133,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -212,27 +141,110 @@
     {
      "data": {
       "text/plain": [
-       "{'EW': <Quantity 0.013130000000000001 Angstrom>,\n",
-       " 'N': <Quantity 0.0 1 / cm2>,\n",
-       " 'b': <Quantity 63.0 km / s>,\n",
-       " 'coord': <SkyCoord (Galactic): (l, b) in deg\n",
-       "     ( 179.832,  65.032)>,\n",
-       " 'flag_EW': 1,\n",
-       " 'flag_N': 1,\n",
-       " 'logN': 16.149999999999999,\n",
-       " 'sig_EW': <Quantity 0.00067 Angstrom>,\n",
-       " 'sig_N': <Quantity 0.0 1 / cm2>,\n",
-       " 'sig_b': <Quantity 0.0 km / s>,\n",
-       " 'sig_logN': [0.34000000000000002, 0.91000000000000003]}"
+       "(8, 7)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mwcgm.cgm_abs[0]._components[0]._abslines[0].attrib"
+    "mwcgm.abs.cgm_abs[0]._components[0].Zion"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "collapsed": true
+   },
+   "source": [
+    "### OVII Systems"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "ovii_tbl = mwcgm.abs.ion_tbl((8,7))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "&lt;Table length=43&gt;\n",
+       "<table id=\"table139686008991136\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>name</th><th>Z</th><th>ion</th><th>A</th><th>Ej</th><th>z</th><th>vmin</th><th>vmax</th><th>flag_N</th><th>logN</th><th>sig_logN</th><th>cgm_name</th></tr></thead>\n",
+       "<thead><tr><th></th><th></th><th></th><th></th><th>1 / cm</th><th></th><th>km / s</th><th>km / s</th><th></th><th></th><th></th><th></th></tr></thead>\n",
+       "<thead><tr><th>str32</th><th>int64</th><th>int64</th><th>int64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int64</th><th>float64</th><th>float64</th><th>str21</th></tr></thead>\n",
+       "<tr><td>J110427.4519+381230.7254_z0.000</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0</td><td>0.0</td><td>0.0</td><td>J1104+3812_230_413884</td></tr>\n",
+       "<tr><td>J215852.0975-301333.2492_z0.000</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0</td><td>0.0</td><td>0.0</td><td>J2158-3013_133_195569</td></tr>\n",
+       "<tr><td>J122906.7131+020308.6473_z0.000</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0</td><td>0.0</td><td>0.0</td><td>J1229+0203_63_293433</td></tr>\n",
+       "<tr><td>J224239.266+294329.7978_z0.000</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0</td><td>0.0</td><td>0.0</td><td>J2242+2943_176_330956</td></tr>\n",
+       "<tr><td>J204409.6745-104324.5049_z0.000</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0</td><td>0.0</td><td>0.0</td><td>J2044-1043_146_163511</td></tr>\n",
+       "<tr><td>J120309.5902+443153.2619_z0.000</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0</td><td>0.0</td><td>0.0</td><td>J1203+4431_214_385037</td></tr>\n",
+       "<tr><td>J055947.4975-502650.9811_z-0.000</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0</td><td>0.0</td><td>0.0</td><td>J0559-5026_189_361995</td></tr>\n",
+       "<tr><td>J133553.7173-341744.928_z0.000</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0</td><td>0.0</td><td>0.0</td><td>J1335-3417_153_189395</td></tr>\n",
+       "<tr><td>J121826.4811+294846.4178_z0.000</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0</td><td>0.0</td><td>0.0</td><td>J1218+2948_261_351343</td></tr>\n",
+       "<tr><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td><td>...</td></tr>\n",
+       "<tr><td>J043311.0825+052114.968_z0.000</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0</td><td>0.0</td><td>0.0</td><td>J0433+0521_212_543052</td></tr>\n",
+       "<tr><td>J092512.9374+521710.9473_z0.000</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0</td><td>0.0</td><td>0.0</td><td>J0925+5217_212_481236</td></tr>\n",
+       "<tr><td>J023819.5227-521132.6105_z-0.000</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0</td><td>0.0</td><td>0.0</td><td>J0238-5211_183_320869</td></tr>\n",
+       "<tr><td>J133718.8203+242303.0933_z0.000</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0</td><td>0.0</td><td>0.0</td><td>J1337+2423_120_288027</td></tr>\n",
+       "<tr><td>J114540.3806-182715.6215_z0.000</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0</td><td>0.0</td><td>0.0</td><td>J1145-1827_171_292244</td></tr>\n",
+       "<tr><td>J134919.2048-301834.2781_z0.000</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0</td><td>0.0</td><td>0.0</td><td>J1349-3018_149_182766</td></tr>\n",
+       "<tr><td>J005719.9396-222259.3831_z0.000</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0</td><td>0.0</td><td>0.0</td><td>J0057-2222_311_337386</td></tr>\n",
+       "<tr><td>J005335.0103+124136.0415_z-0.000</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0</td><td>0.0</td><td>0.0</td><td>J0053+1241_227_399034</td></tr>\n",
+       "<tr><td>J125611.1278-054723.0104_z0.000</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0</td><td>0.0</td><td>0.0</td><td>J1256-0547_114_258405</td></tr>\n",
+       "<tr><td>J041652.5671+010522.8093_z0.000</td><td>0</td><td>0</td><td>0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0.0</td><td>0</td><td>0.0</td><td>0.0</td><td>J0416+0105_213_522096</td></tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Table length=43>\n",
+       "              name                 Z    ion  ... sig_logN        cgm_name      \n",
+       "                                             ...                               \n",
+       "             str32               int64 int64 ... float64          str21        \n",
+       "-------------------------------- ----- ----- ... -------- ---------------------\n",
+       " J110427.4519+381230.7254_z0.000     0     0 ...      0.0 J1104+3812_230_413884\n",
+       " J215852.0975-301333.2492_z0.000     0     0 ...      0.0 J2158-3013_133_195569\n",
+       " J122906.7131+020308.6473_z0.000     0     0 ...      0.0  J1229+0203_63_293433\n",
+       "  J224239.266+294329.7978_z0.000     0     0 ...      0.0 J2242+2943_176_330956\n",
+       " J204409.6745-104324.5049_z0.000     0     0 ...      0.0 J2044-1043_146_163511\n",
+       " J120309.5902+443153.2619_z0.000     0     0 ...      0.0 J1203+4431_214_385037\n",
+       "J055947.4975-502650.9811_z-0.000     0     0 ...      0.0 J0559-5026_189_361995\n",
+       "  J133553.7173-341744.928_z0.000     0     0 ...      0.0 J1335-3417_153_189395\n",
+       " J121826.4811+294846.4178_z0.000     0     0 ...      0.0 J1218+2948_261_351343\n",
+       "                             ...   ...   ... ...      ...                   ...\n",
+       "  J043311.0825+052114.968_z0.000     0     0 ...      0.0 J0433+0521_212_543052\n",
+       " J092512.9374+521710.9473_z0.000     0     0 ...      0.0 J0925+5217_212_481236\n",
+       "J023819.5227-521132.6105_z-0.000     0     0 ...      0.0 J0238-5211_183_320869\n",
+       " J133718.8203+242303.0933_z0.000     0     0 ...      0.0 J1337+2423_120_288027\n",
+       " J114540.3806-182715.6215_z0.000     0     0 ...      0.0 J1145-1827_171_292244\n",
+       " J134919.2048-301834.2781_z0.000     0     0 ...      0.0 J1349-3018_149_182766\n",
+       " J005719.9396-222259.3831_z0.000     0     0 ...      0.0 J0057-2222_311_337386\n",
+       "J005335.0103+124136.0415_z-0.000     0     0 ...      0.0 J0053+1241_227_399034\n",
+       " J125611.1278-054723.0104_z0.000     0     0 ...      0.0 J1256-0547_114_258405\n",
+       " J041652.5671+010522.8093_z0.000     0     0 ...      0.0 J0416+0105_213_522096"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ovii_tbl"
    ]
   },
   {
