--- a/docs/datasets/XQ100_systems.ipynb
+++ b/docs/datasets/XQ100_systems.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Notebook to organize Ingestion of XQ100 datasets (v1.2)"
+    "# Notebook to organize Ingestion of XQ100 datasets (v1.3)"
    ]
   },
   {
@@ -45,22 +45,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ppath = pyigm.__path__[0]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING: UnitsWarning: '-' did not parse as fits unit: Invalid character at col 0 [astropy.units.core]\n",
-      "WARNING: UnitsWarning: '[cm-2]' did not parse as fits unit: Invalid character at col 0 [astropy.units.core]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "xqmeta_file = pyigm.__path__[0]+'/data/DLA/XQ-100/XQ100_v1_2.fits.gz'\n",
+    "xqmeta_file = ppath+'/data/DLA/XQ-100/XQ100_v1_2.fits.gz'\n",
     "xq100_meta = Table.read(xqmeta_file)"
    ]
   },
@@ -75,7 +77,7 @@
      "data": {
       "text/html": [
        "&lt;Table masked=True length=5&gt;\n",
-       "<table id=\"table4643180624\">\n",
+       "<table id=\"table4546664336\" class=\"table-striped table-bordered table-condensed\">\n",
        "<thead><tr><th>OBJ_NAME</th><th>RA</th><th>DEC</th><th>FILE_NAME</th><th>Z_QSO</th><th>ERR_ZQSO</th><th>N_OBS</th><th>MJD_OBS [3]</th><th>SEEING_START [3]</th><th>SEEING_END [3]</th><th>SNR_1700 [3]</th><th>SNR_3000 [3]</th><th>SNR_3600 [3]</th><th>CALIB_FLAG [3]</th><th>COMBINED_FLAG</th><th>COMBINED_SNR_17</th><th>COMBINED_SNR_30</th><th>COMBINED_SNR_36</th><th>HR_FLAG</th><th>JOHNSON_MAG [3]</th><th>SDSS_PSFMAG [5]</th><th>SDSS_ERR_PSFMAG [5]</th><th>DR7Q_MATCHED</th><th>PLATE_DR7Q</th><th>MJD_DR7Q</th><th>FIBER_DR7Q</th><th>DR12Q_MATCHED</th><th>N_DR12Q</th><th>PLATE_DR12Q [2]</th><th>MJD_DR12Q [2]</th><th>FIBER_DR12Q [2]</th><th>FIRST_MATCHED</th><th>FIRST_FLUX</th><th>FIRST_SNR</th><th>MATCHED_TMASS</th><th>TMASS_MAG [3]</th><th>TMASS_ERR_MAG [3]</th><th>TMASS_SNR [3]</th><th>RD_FLAG</th><th>MATCHED_WISE</th><th>WISE_MAG [4]</th><th>WISE_ERR_MAG [4]</th><th>WISE_SNR [4]</th><th>WISE_RCHI2 [4]</th><th>CC_FLAG</th><th>PH_QUAL</th><th>N_ABS</th><th>Z_ABS [4]</th><th>NHI_ABS [4]</th><th>ERR_NHI_ABS [4]</th></tr></thead>\n",
        "<thead><tr><th>-</th><th>deg</th><th>deg</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>arcsec</th><th>arcsec</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>mJy</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>-</th><th>[cm-2]</th><th>[cm-2]</th></tr></thead>\n",
        "<thead><tr><th>str24</th><th>float64</th><th>float64</th><th>str1</th><th>float32</th><th>float32</th><th>int32</th><th>float32</th><th>float32</th><th>float32</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>int16</th><th>float64</th><th>float64</th><th>float64</th><th>int16</th><th>float32</th><th>float64</th><th>float64</th><th>int16</th><th>int32</th><th>int32</th><th>int32</th><th>int16</th><th>int32</th><th>int32</th><th>int32</th><th>int32</th><th>int32</th><th>float64</th><th>float64</th><th>int16</th><th>float64</th><th>float64</th><th>float64</th><th>str3</th><th>int16</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>str4</th><th>str3</th><th>int16</th><th>float64</th><th>float64</th><th>float64</th></tr></thead>\n",
@@ -131,6 +133,54 @@
    "metadata": {},
    "source": [
     "### $N_{\\rm HI}$ -- (Sanchez-Ramirez et al. 2016, MNRAS, 456, 4488)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "&lt;Table length=3&gt;\n",
+       "<table id=\"table4424655632\" class=\"table-striped table-bordered table-condensed\">\n",
+       "<thead><tr><th>id</th><th>RA</th><th>Dec</th><th>zabs</th><th>logN</th><th>elogN</th><th>Orders</th></tr></thead>\n",
+       "<thead><tr><th></th><th>deg</th><th>deg</th><th></th><th></th><th></th><th></th></tr></thead>\n",
+       "<thead><tr><th>str30</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>float64</th><th>str30</th></tr></thead>\n",
+       "<tr><td>0000-263</td><td>0.84546</td><td>-26.05467</td><td>3.39</td><td>21.4</td><td>0.1</td><td>\\Lya, \\Lyb, \\Lyg, \\Lyd, \\Lye</td></tr>\n",
+       "<tr><td>0000-263</td><td>0.84546</td><td>-26.05467</td><td>3.0545</td><td>20.2</td><td>0.1</td><td>\\Lya, \\Lyb</td></tr>\n",
+       "<tr><td>0000-263</td><td>0.84546</td><td>-26.05467</td><td>2.6295</td><td>19.1</td><td>0.1</td><td>\\Lya</td></tr>\n",
+       "</table>"
+      ],
+      "text/plain": [
+       "<Table length=3>\n",
+       "   id       RA      Dec      zabs    logN   elogN             Orders           \n",
+       "           deg      deg                                                        \n",
+       " str30   float64  float64  float64 float64 float64            str30            \n",
+       "-------- ------- --------- ------- ------- ------- ----------------------------\n",
+       "0000-263 0.84546 -26.05467    3.39    21.4     0.1 \\Lya, \\Lyb, \\Lyg, \\Lyd, \\Lye\n",
+       "0000-263 0.84546 -26.05467  3.0545    20.2     0.1                   \\Lya, \\Lyb\n",
+       "0000-263 0.84546 -26.05467  2.6295    19.1     0.1                         \\Lya"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "abstab = Table.read(ppath+'/data/DLA/XQ-100/XQ100_abs.fit')\n",
+    "abstab[0:3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### pyigm"
    ]
   },
   {
@@ -1517,7 +1567,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "version": "2.7.13"
   }
  },
  "nbformat": 4,
