--- a/docs/examples/DLASurvey_examples.ipynb
+++ b/docs/examples/DLASurvey_examples.ipynb
@@ -986,7 +986,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 44,
    "metadata": {
     "collapsed": false
    },
@@ -994,18 +994,67 @@
     {
      "data": {
       "text/plain": [
-       "(array([ 7.69991655,  7.89027403]),\n",
+       "(<Quantity [ 0.50109093, 0.77673707] solMass / Mpc3>,\n",
        " <Quantity [  9844532.72342437, 12926489.76807207] solMass / Mpc3>,\n",
        " <Quantity [ 10074803.40773631, 13039660.50449806] solMass / Mpc3>)"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 44,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "np.log10(rho.value), rho_lo, rho_hi"
+    "rho/1e8, rho_lo, rho_hi"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### $f(N,X)$"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "fN, fN_lo, fN_hi = sdss_stat.calculate_fn([20.3, 20.5, 21., 21.5, 22.], [2, 2.5], log=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(array([[-21.78294186],\n",
+       "        [-22.49859874],\n",
+       "        [-23.68148193],\n",
+       "        [-24.74575336]]), array([[ 0.0682087 ],\n",
+       "        [ 0.06395184],\n",
+       "        [ 0.1529649 ],\n",
+       "        [ 0.34125893]]), array([[ 0.06750842],\n",
+       "        [ 0.06336817],\n",
+       "        [ 0.14659368],\n",
+       "        [ 0.29506734]]))"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "fN, fN_lo, fN_hi"
    ]
   },
   {
