--- a/docs/datasets/GGG_DLAs.ipynb
+++ b/docs/datasets/GGG_DLAs.ipynb
@@ -134,7 +134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -183,33 +183,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/xavier/local/Python/pyigm/pyigm/surveys/dlasurvey.py:866: UserWarning: Resetting mask to None.  Be careful here\n",
-      "  warnings.warn(\"Resetting mask to None.  Be careful here\")\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "Loading QSOs file /home/xavier/local/Python/pyigm/pyigm/data/DLA/GGG/GGG_QSO.dat\n",
-      "> /home/xavier/local/Python/pyigm/pyigm/surveys/dlasurvey.py(377)load_lit()\n",
-      "-> if sample == 'stat':\n",
-      "(Pdb) mask\n",
-      "array([ True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-      "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-      "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-      "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-      "        True,  True,  True,  True,  True,  True,  True,  True,  True,\n",
-      "        True,  True,  True,  True], dtype=bool)\n"
+      "Loaded\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/xavier/local/Python/pyigm/pyigm/surveys/dlasurvey.py:865: UserWarning: Resetting mask to None.  Be careful here\n",
+      "  if DLAs.mask is not None:\n"
      ]
     }
    ],
@@ -220,11 +212,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<IGMSurvey: nsys=49, type=DLA, ref=GGG, nsightlines=163>"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "ggg_stat"
    ]
