generating v1.2; except for the file itself

--- a/docs/datasets/COS-Halos_database.ipynb
+++ b/docs/datasets/COS-Halos_database.ipynb
@@ -27,10 +27,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 4,
+   "metadata": {},
    "outputs": [],
    "source": [
     "# imports\n",
@@ -79,9 +77,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -244,9 +240,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -304,9 +298,7 @@
   {
    "cell_type": "code",
    "execution_count": 26,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -356,9 +348,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stderr",
@@ -398,9 +388,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import json\n",
@@ -422,9 +410,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "names = cos_halos_v10.name"
@@ -433,9 +419,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "for key in fdict.keys():\n",
@@ -477,9 +461,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "import yaml\n",
@@ -492,9 +474,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -523,9 +503,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -599,9 +577,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "mtlfil = pyigm.__path__[0]+'/data/CGM/COS_Halos/COS_Halos_MTL_final.hdf5'\n",
@@ -625,9 +601,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "tarfil = 'cos-halos_systems.v1.1.tar.gz'"
@@ -636,9 +610,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -670,21 +642,74 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
+   "outputs": [],
+   "source": [
+    "from importlib import reload"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "See the COS-Halos_database notebook for details\n",
-      "Generate v1.2 of the JSON tarball\n",
-      "Be patient, using /Users/xavier/local/Python/pyigm/pyigm/data/CGM/COS_Halos/cos-halos_systems.v1.1.tar.gz to load\n",
+      "Generate v1.2 of the JSON tarball\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/xavier/local/Python/linetools/linetools/lists/linelist.py:402: RuntimeWarning: divide by zero encountered in log10\n",
+      "  self._extra_table['log(w*f)'] = np.log10(qm_strength)\n",
+      "/home/xavier/local/Python/linetools/linetools/spectralline.py:214: UserWarning: Redshift not input.  Setting to 0 for zLimits\n",
+      "  warnings.warn(\"Redshift not input.  Setting to 0 for zLimits\")\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading abundances from Asplund2009\n",
+      "Abundances are relative by number on a logarithmic scale with H=12\n",
+      "Be patient, using /home/xavier/local/Python/pyigm/pyigm/data/CGM/COS_Halos/cos-halos_systems.v1.1.tar.gz to load\n",
       "Skipping a likely folder: CGM_JSON\n",
-      "Loading mega...\n",
-      "Wrote: /Users/xavier/local/Python/pyigm/pyigm/data/CGM/COS_Halos/cos-halos_systems.v1.2.tar.gz\n"
+      "Loading mega...\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/xavier/local/Python/pyigm/pyigm/cgm/cos_halos.py:272: UserWarning: This method may be DEPRECATED\n",
+      "  warnings.warn(\"This method may be DEPRECATED\")\n",
+      "/home/xavier/local/Python/linetools/linetools/utils.py:123: UserWarning: Assuming your DEC is +\n",
+      "  warnings.warn(\"Assuming your DEC is +\")\n",
+      "/home/xavier/local/Python/pyigm/pyigm/cgm/cgm.py:155: UserWarning: cgm.CGMAbsSys: Using Planck15 cosmology\n",
+      "  warnings.warn('cgm.CGMAbsSys: Using Planck15 cosmology')\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wrote: /home/xavier/local/Python/pyigm/pyigm/data/CGM/COS_Halos/cos-halos_systems.v1.2.tar.gz\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/xavier/local/Python/pyigm/pyigm/cgm/cgmsurvey.py:182: UserWarning: Modify to write directly to tar file\n",
+      "  warnings.warn(\"Modify to write directly to tar file\")\n"
      ]
     }
    ],
@@ -702,7 +727,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {
     "collapsed": true
    },
@@ -713,16 +738,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 12,
+   "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/home/xavier/local/Python/linetools/linetools/lists/linelist.py:402: RuntimeWarning: divide by zero encountered in log10\n",
+      "  self._extra_table['log(w*f)'] = np.log10(qm_strength)\n",
+      "/home/xavier/local/Python/linetools/linetools/spectralline.py:214: UserWarning: Redshift not input.  Setting to 0 for zLimits\n",
+      "  warnings.warn(\"Redshift not input.  Setting to 0 for zLimits\")\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Be patient, using /Users/xavier/local/Python/pyigm/pyigm/data/CGM/COS_Halos/cos-halos_systems.v1.2.tar.gz to load\n",
+      "Loading abundances from Asplund2009\n",
+      "Abundances are relative by number on a logarithmic scale with H=12\n",
+      "Be patient, using /home/xavier/local/Python/pyigm/pyigm/data/CGM/COS_Halos/cos-halos_systems.v1.2.tar.gz to load\n",
       "Skipping a likely folder: CGM_JSON\n"
      ]
     }
@@ -736,14 +771,12 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "-20.38229751586914"
+       "-20.73882484436035"
       ]
      },
      "execution_count": 13,
@@ -758,17 +791,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {
-    "collapsed": false
-   },
+   "execution_count": 14,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<CGMAbsSys: J0226+0015_268_22 Galaxy RA/DEC=02:26:12.98+00:15:29.1, zgal=0.22744, rho=84.1102 kpc> 0.506896165972\n"
+      "<CGMAbsSys: J1233+4758_94_38 Galaxy RA/DEC=12:33:38.87+47:57:57.6, zgal=0.222103, rho=137.515 kpc>\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "(None, 0.7039307511695455)"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -789,23 +830,23 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 2",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "python2"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.11"
+   "pygments_lexer": "ipython3",
+   "version": "3.6.3"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 0
+ "nbformat_minor": 1
 }
